:bug: Fix bug regarding animated cursor on mobile device with media query

--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -37,3 +37,11 @@ body {
   // padding-top: calc(var(--index) * 2.5rem);
   top: calc(var(--index) * 4rem);
 }
+
+// disable animated cursor on mobile devices
+
+@media (max-width: 768px) {
+  .animated-cursor {
+    display: none !important;
+  }
+}
